--- a/AOC/AOC.csproj
+++ b/AOC/AOC.csproj
@@ -20,6 +20,9 @@
     <None Update="input-day3 %28copy%29.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="input-day4 %28copy%29.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
