--- a/AOC/AOC.csproj
+++ b/AOC/AOC.csproj
@@ -26,6 +26,9 @@
     <None Update="input-day4 %28copy%29.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="input-day8.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
   <ItemGroup>
