--- a/AOC/AOC.csproj
+++ b/AOC/AOC.csproj
@@ -46,6 +46,9 @@
     <None Update="2022\input-day12.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="2022\input-day13.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <None Update="2021\input-day1.txt">
